hcc/tests/conform/errors/parse/unexpected_token.hc
//@ error: expected an expression
#include <stdlib.hh>
@ U0 Main() {}
